3.2.7 - fixed shield smithing menu recipe functionality